# laptop-dictation

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
scripts/: setup.sh  smoke.sh
src/dictate/: __init__.py  cli.py  config.py  listener.py  output.py  recorder.py  transcribe.py
tests/: test_config.py  test_listener.py  test_output.py  test_recorder.py  test_transcribe.py
