[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "laptop-dictation"
version = "0.3.0"
description = "Push-to-talk dictation for macOS/Linux. Hold a hotkey, speak, get text in your clipboard. Local Whisper, no cloud roundtrip."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.0",
    "pynput>=1.7.7",
    "pyperclip>=1.9.0",
    "rich>=13.9.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
api = ["openai>=1.50.0"]
dev = ["pytest>=8.3.0", "ruff>=0.7.0"]

[project.scripts]
dictate = "dictate.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
